--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
-body{
+
+html{
+    
+}
+    body{
     margin: 0;
+    background-color: #eec0c6;
+background-image: linear-gradient(315deg, #fac6b9 0%, #7ee8fa 74%);
+
     overflow: hidden;
 }
 *{
@@ -9,13 +16,15 @@ body{
     /* position: relative; */
     height:100vh;
     width: 100vw;
-    background: rgba(238,238,238,255);
+    background-color: #aee1f9;
+    background-image: linear-gradient(315deg, #9dd6f0 0%, #eecee8 74%);
+    
     
 }
 .navbar{
     height: 20%;
     width:100%;
-    background-color: aquamarine;
+    background-color: #895061;
     display: flex;
     flex-direction: column;
 }
@@ -30,19 +39,26 @@ body{
 .stack,.queue{
     align-items: center;
     display: flex;
+    color: black;
     justify-content: center;
     height: 100%;
     width: 50%;
-    background-color: burlywood;
-    color: white;
+    background-color: #0cbaba;
+    background-image: linear-gradient(315deg, #8de7e7 0%, #39083974 74%);
+    
+   color: black;
     font-size: 35px;
 }
 .stack:hover,.queue:hover{
-    background-color: rgb(248, 220, 178);
+    background-color: #0cbabac4;
+    background-image: linear-gradient(315deg, #afe2e2 0%, #4513455c 74%);
     cursor: pointer;
 }
 .stack.selected,.queue.selected{
-    background-color: rgb(182, 139, 83);
+    color: white;
+    background-color: #78244c;
+    background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
+    
 }
 .add-delete{
     display: flex;
@@ -77,7 +93,7 @@ body{
     /* margin-left: 40%; */
     display: flex;
     flex-direction: column;
-    border: 3px solid rgba(0,219,205,1);
+    border: 3px solid #78244c ;
     border-top: 0px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -89,7 +105,7 @@ body{
     height: 10%;
     width: 93%;
     margin: 3.5%;
-    background-color: #6ab5ff;
+    background-color:#78244c;
     color: white;
     align-items: center;
     display: flex;
@@ -103,7 +119,7 @@ body{
     height: 6%;
     width: 8%;
     margin: 3.5%;
-    background-color: rgb(8, 94, 8);
+    background-color:#78244c;
     color: white;
     align-items: center;
     display: flex;
@@ -128,7 +144,30 @@ body{
         anim 2s,
         anim1 2.5s 2s reverse; */
 }
-
+.add{
+    background-color: #78244c;
+    padding: 3px;
+    color: white;
+    border-radius: 2px;
+    cursor: pointer;
+}
+.delete{
+    background-color: #78244c;
+    padding: 5px;
+    border-radius: 2px;
+    color: white;
+    border-radius: 4%;
+    cursor: pointer;
+}
+.peek{
+    background-color: #78244c;
+    border-radius: 4px;
+    padding: 4px;
+ 
+    color: white;
+    border-radius: 4%;
+    cursor: pointer; 
+}
 #arrow{
     color: black;
     background-color: black;
